--- a/Assignment/android/app/src/main/AndroidManifest.xml
+++ b/Assignment/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      android:usesCleartextTraffic="true"
+      
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -16,6 +18,7 @@
         android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize"
         android:exported="true">
+        
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
