--- a/Assignment/android/build.gradle
+++ b/Assignment/android/build.gradle
@@ -17,5 +17,7 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
+        //compile project(':react-native-video')
+        //implementation("androidx.appcompat:appcompat:1.0.0")
     }
 }
