--- a/Assignment/android/gradle.properties
+++ b/Assignment/android/gradle.properties
@@ -42,3 +42,11 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+android.useAndroidX=true
+android.enableJetifier=true
+
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=@Clusterup98
+MYAPP_UPLOAD_KEY_PASSWORD=@Clusterup98
