--- a/Assignment/package.json
+++ b/Assignment/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.72.3",
     "react-native-fs": "^2.20.0",
     "react-native-image-crop-picker": "^0.40.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
     "react-native-video": "^5.2.1"
